# chip-8

./: .gitignore  CMakeLists.txt  README.md  mainLinux  test.bat
include/: disassemble.h  emu.h  font.h  instruction.h
src/: disassemble.c  emu.c  instruction.c  main.c
